--- a/HW4/Code/HW4.ipynb
+++ b/HW4/Code/HW4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,21 +32,27 @@
     "\n",
     "\n",
     "def readData(fileName):\n",
-    "    \n",
     "    data = ''\n",
     "    f = open(fileName, 'rb')\n",
     "    soup = BeautifulSoup(f, 'html.parser')\n",
     "    # get body content\n",
     "    contents = soup.findAll('body')\n",
-    "    \n",
     "    return contents\n",
+    "\n",
+    "def reExp(d):\n",
+    "    # remove header space and footer space\n",
+    "    sentence = d.strip()\n",
+    "    # regular expresisson\n",
+    "    pat = '[a-zA-Z]+'\n",
+    "    reContent = re.findall(pat, sentence)\n",
+    "    return reContent\n",
     "\n",
     "# parsing data from sgm file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +86,7 @@
       "\n",
       "Total body number: 1855\n",
       "Total word number: 45595\n",
-      "Count word Frequency took: 41.23s\n"
+      "Count word Frequency took: 40.92s\n"
      ]
     }
    ],
@@ -110,11 +116,8 @@
     "            bodyLen +=1\n",
     "        # split one body content by \\n\n",
     "        for d in content.get_text().split(\"\\n\"):\n",
-    "            # remove header space and footer space\n",
-    "            sentence = d.strip()\n",
-    "            # regular expresisson\n",
-    "            pat = '[a-zA-Z]+'\n",
-    "            reContent = re.findall(pat, sentence)\n",
+    "            # regular expresisson process\n",
+    "            reContent = reExp(d)\n",
     "            # select one word on each time\n",
     "            for ind in range(len(reContent)):\n",
     "                # add word\n",
@@ -139,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -170,8 +173,7 @@
       "Calculate word Frequency matrix done\n",
       "total Word num 138615\n",
       "total match num 138615\n",
-      "Calculate word Frequency matrix took 306.47s\n",
-      "Save word Frequency matrix took 78.16\n"
+      "Calculate word Frequency matrix took 310.33s\n"
      ]
     }
    ],
@@ -184,8 +186,7 @@
     "file = [\"000\",\"001\",\"002\",\"003\",\"004\",\"005\",\"006\",\"007\",\"008\",\"009\",\"010\",\"011\",\"012\",\"013\",\"014\",\"015\",\"016\",\"017\",\"018\",\"019\",\"020\",\"021\"]\n",
     "matchNum = 0\n",
     "col = 0\n",
-    "pat = '[a-zA-Z]+'\n",
-    "matrix = np.zeros((wordLen,bodyLen), int)\n",
+    "MxN_matrix = np.zeros((wordLen,bodyLen), int)\n",
     "totalWord = 0\n",
     "# ==== initial setting ====\n",
     "\n",
@@ -203,10 +204,8 @@
     "        bContWordDict = {}\n",
     "        # split one body content by \\n\n",
     "        for d in content.get_text().split(\"\\n\"):\n",
-    "            # remove header space and footer space\n",
-    "            sentence = d.strip()\n",
-    "            # regular expresisson\n",
-    "            reContent = re.findall(pat, sentence)\n",
+    "            # regular expresisson process\n",
+    "            reContent = reExp(d)\n",
     "            # select one word on each time\n",
     "            for r in range(len(reContent)):\n",
     "                if reContent[r] not in bContWordDict:\n",
@@ -225,7 +224,7 @@
     "                print(row)\n",
     "            # find out term appeared location, then append value to matrix\n",
     "            if wordWithCount[0] == wordList[w]:\n",
-    "                matrix[w][col] = wordWithCount[1]\n",
+    "                MxN_matrix[w][col] = wordWithCount[1]\n",
     "                matchNum += 1\n",
     "                row +=1\n",
     "            # when visit all term on one body content then break this loop\n",
@@ -242,9 +241,9 @@
     "print(\"Calculate word Frequency matrix took %.2fs\" % (time.time()-sTime))\n",
     "\n",
     "# save Q1 Result\n",
-    "sTime = time.time()\n",
-    "np.savetxt(\"Q1_Result.csv\", matrix, delimiter=\",\")\n",
-    "print(\"Save word Frequency matrix took %.2f\" % (time.time()-sTime))\n",
+    "# sTime = time.time()\n",
+    "# np.savetxt(\"Q1_Result.csv\", MxN_matrix, delimiter=\",\")\n",
+    "# print(\"Save word Frequency matrix took %.2f\" % (time.time()-sTime))\n",
     "\n",
     "\n",
     "\n",
@@ -253,117 +252,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start process matrix multiplication!\n",
+      "Process matrix multiplication done!\n",
+      "MxR_Matrix multiplication took 0.10\n",
+      "Save MxR_Matrix took 0.08s\n"
+     ]
+    }
+   ],
    "source": [
+    "# Q2\n",
     "\n",
-    "# # Q2\n",
+    "# ==== initial setting ====\n",
+    "sTime = time.time()\n",
+    "NxR_matrix = np.random.randint(1,5,[bodyLen,1])\n",
+    "# ==== initial setting ====\n",
     "\n",
-    "# # ==== initial setting ====\n",
+    "print(\"Start process matrix multiplication!\")\n",
     "\n",
-    "# sTime = time.time()\n",
-    "# index = 0\n",
-    "# flag = 0\n",
-    "# minHash = np.zeros(bodyLen,int)\n",
-    "# idx = np.full(shingleLen, False, dtype=bool)\n",
-    "# curNum = 0\n",
-    "# ind = 0\n",
-    "# mod = 10\n",
-    "\n",
-    "# # ==== initial setting ====\n",
-    "\n",
-    "# print(\"Start process minHash!\")\n",
-    "# while index < shingleLen and flag < bodyLen:\n",
-    "#     curNum = ind\n",
-    "#     index +=1\n",
-    "#     if(curNum + mod)< shingleLen:\n",
-    "#         ind = curNum + mod\n",
-    "#     else:\n",
-    "#         ind = (curNum + mod) % shingleLen\n",
-    "#     while idx[ind] == True:\n",
-    "#         ind += 1\n",
-    "#     idx[ind] = True\n",
-    "#     for c in range(bodyLen):\n",
-    "#         if matrix[ind][c] == True:\n",
-    "#             if minHash[c] == 0:\n",
-    "#                 minHash[c] = index\n",
-    "#                 flag +=1\n",
-    "#     if index % 2000 ==0:\n",
-    "#         print(\"flag \",flag, \" done!\")\n",
-    "#         print(\"index \", index, \" done!\")\n",
+    "MxR_matrix = np.dot(MxN_matrix, NxR_matrix)\n",
     "        \n",
-    "# print(\"Process minHash done!\")\n",
-    "# print(\"MinHash calculate took %.2f\" % (time.time()-sTime))\n",
+    "print(\"Process matrix multiplication done!\")\n",
+    "print(\"MxR_Matrix multiplication took %.2f\" % (time.time()-sTime))\n",
     "\n",
-    "# # save Q2 Result\n",
-    "# sTime = time.time()\n",
-    "# np.savetxt(\"Q2_Result.csv\", minHash, delimiter=\",\")\n",
-    "# print(\"Save minHash matrix took %.2fs\" % (time.time()-sTime))\n",
+    "# save Q2 Result\n",
+    "sTime = time.time()\n",
+    "np.savetxt(\"Q2_Result.csv\", MxR_matrix, delimiter=\",\")\n",
+    "print(\"Save MxR_Matrix took %.2fs\" % (time.time()-sTime))\n",
     "\n",
     "\n",
-    "# # Q2\n"
+    "# Q2\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# from collections import OrderedDict\n",
-    "\n",
-    "# s = set()\n",
-    "\n",
-    "# s.add(\"1\")\n",
-    "# s.add(\"2\")\n",
-    "# s.add(\"3\")\n",
-    "# s.add(\"b\")\n",
-    "# s.add(\"ac\")\n",
-    "# s.add(\"ed\")\n",
-    "# s.add(\"a\")\n",
-    "# #print(s)\n",
-    "\n",
-    "# l = []\n",
-    "# for i in s:\n",
-    "#     l.append(i)   \n",
-    "# l.sort()\n",
-    "\n",
-    "# #print(l)\n",
-    "\n",
-    "\n",
-    "# d = {}\n",
-    "# d[\"b\"] = 123\n",
-    "# d[\"ac\"] = 45\n",
-    "# d[\"ed\"] = 66\n",
-    "# d[\"a\"] = 777\n",
-    "\n",
-    "\n",
-    "# ans = OrderedDict(sorted(d.items(), key=lambda x: x[0]))\n",
-    "\n",
-    "\n",
-    "# print(ans)\n",
-    "# print(l)\n",
-    "\n",
-    "# row = 0\n",
-    "# for i in l:\n",
-    "\t\n",
-    "# \tasd = list(ans.items())[row]\n",
-    "# \tprint(asd[0],\" \", i)\n",
-    "\t\n",
-    "# \tif asd[0] == i:\n",
-    "# \t\tprint(i)\n",
-    "# \t\trow+=1\n",
-    "# \tprint(\"row \", row)\n",
-    "# \tif row == len(ans)-1:\n",
-    "# \t\tprint(\"HI\")\n",
-    "# \t\tbreak\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
