--- a/HW4/Code/HW4.ipynb
+++ b/HW4/Code/HW4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
       "\n",
       "Total body number: 1855\n",
       "Total word number: 45595\n",
-      "Count word Frequency took: 40.92s\n"
+      "Count word Frequency took: 40.82s\n"
      ]
     }
    ],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
       "Calculate word Frequency matrix done\n",
       "total Word num 138615\n",
       "total match num 138615\n",
-      "Calculate word Frequency matrix took 310.33s\n"
+      "Calculate word Frequency matrix took 306.82s\n"
      ]
     }
    ],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -261,8 +261,7 @@
      "text": [
       "Start process matrix multiplication!\n",
       "Process matrix multiplication done!\n",
-      "MxR_Matrix multiplication took 0.10\n",
-      "Save MxR_Matrix took 0.08s\n"
+      "MxR_Matrix multiplication took 0.09\n"
      ]
     }
    ],
@@ -282,9 +281,9 @@
     "print(\"MxR_Matrix multiplication took %.2f\" % (time.time()-sTime))\n",
     "\n",
     "# save Q2 Result\n",
-    "sTime = time.time()\n",
-    "np.savetxt(\"Q2_Result.csv\", MxR_matrix, delimiter=\",\")\n",
-    "print(\"Save MxR_Matrix took %.2fs\" % (time.time()-sTime))\n",
+    "# sTime = time.time()\n",
+    "# np.savetxt(\"Q2_Result.csv\", MxR_matrix, delimiter=\",\")\n",
+    "# print(\"Save MxR_Matrix took %.2fs\" % (time.time()-sTime))\n",
     "\n",
     "\n",
     "# Q2\n"
@@ -292,10 +291,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 144,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start process singular value decomposition!\n",
+      "Process singular value decomposition done!\n",
+      "singular value decomposition took 77.58\n",
+      "Save singular value decomposition took 123.88s\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Q3\n",
+    "\n",
+    "# ==== initial setting ====\n",
+    "sTime = time.time()\n",
+    "# ==== initial setting ====\n",
+    "\n",
+    "print(\"Start process singular value decomposition!\")\n",
+    "\n",
+    "#U, S, VT = np.linalg.svd(MxR_matrix, full_matrices = False)\n",
+    "U, S, VT = np.linalg.svd(MxN_matrix, full_matrices = False)\n",
+    "        \n",
+    "print(\"Process singular value decomposition done!\")\n",
+    "print(\"singular value decomposition took %.2f\" % (time.time()-sTime))\n",
+    "\n",
+    "# save Q3 Result\n",
+    "sTime = time.time()\n",
+    "np.savetxt(\"Q3_U.csv\", U, delimiter=\",\")\n",
+    "np.savetxt(\"Q3_S.csv\", S, delimiter=\",\")\n",
+    "np.savetxt(\"Q3_VT.csv\", VT, delimiter=\",\")\n",
+    "\n",
+    "print(\"Save singular value decomposition took %.2fs\" % (time.time()-sTime))\n",
+    "\n",
+    "\n",
+    "# Q3\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
