--- a/HW5/Code/HW5.ipynb
+++ b/HW5/Code/HW5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,21 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 182,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Start process Q1\n",
-      "['0', '0', '0', '0', '11342']\n",
-      "<class 'list'>\n",
-      "Q1 took: 5.05s\n",
-      "Save Q1 ans took 1.57\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Q1\n",
     "\n",
@@ -91,15 +79,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 183,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start process Q2\n",
+      "Q2 took: 5.34s\n",
+      "Save Q2 ans took 1.63\n"
+     ]
+    }
+   ],
    "source": [
     "# Q2\n",
+    "\n",
+    "# ==== initial setting ====\n",
+    "sTime = time.time()\n",
+    "# ==== initial setting ====\n",
+    "\n",
+    "\n",
+    "print(\"Start process Q2\")\n",
+    "# map data to rdd by spark\n",
+    "rdd = data.map(lambda col:col.split()).map(lambda c:c[1])\n",
+    "\n",
+    "# count each node out-degree, then sort key-value with ascending by out-degree\n",
+    "rd = sorted(rdd.countByValue().items(),key=lambda t: t[1], reverse=True)\n",
+    "# for convenient save result\n",
+    "cby = np.zeros((len(rd),2),int)\n",
+    "# for convenient save result\n",
+    "for i in range(len(rd)):\n",
+    "    cby[i][0] = rd[i][0]\n",
+    "    cby[i][1] = rd[i][1]\n",
+    "    \n",
+    "print(\"Q2 took: %.2fs\" % (time.time()-sTime))\n",
+    "\n",
+    "\n",
+    "# save Q2 Result\n",
+    "sTime = time.time()\n",
+    "np.savetxt(\"Q2_Result.csv\", cby, delimiter=\",\")\n",
+    "print(\"Save Q2 ans took %.2f\" % (time.time()-sTime))\n",
     "\n",
     "\n",
     "# Q2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
