--- a/HW5/Code/HW5.ipynb
+++ b/HW5/Code/HW5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,19 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 268,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Start process Q2\n",
-      "Q2 took: 5.34s\n",
-      "Save Q2 ans took 1.63\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Q2\n",
     "\n",
@@ -106,18 +96,18 @@
     "\n",
     "# count each node out-degree, then sort key-value with ascending by out-degree\n",
     "rd = sorted(rdd.countByValue().items(),key=lambda t: t[1], reverse=True)\n",
-    "# for convenient save result\n",
-    "cby = np.zeros((len(rd),2),int)\n",
-    "# for convenient save result\n",
-    "for i in range(len(rd)):\n",
-    "    cby[i][0] = rd[i][0]\n",
-    "    cby[i][1] = rd[i][1]\n",
     "    \n",
     "print(\"Q2 took: %.2fs\" % (time.time()-sTime))\n",
     "\n",
     "\n",
     "# save Q2 Result\n",
     "sTime = time.time()\n",
+    "# for convenient save result\n",
+    "cby = np.zeros((len(rd),2),int)\n",
+    "# for convenient save result\n",
+    "for i in range(len(rd)):\n",
+    "    cby[i][0] = rd[i][0]\n",
+    "    cby[i][1] = rd[i][1]\n",
     "np.savetxt(\"Q2_Result.csv\", cby, delimiter=\",\")\n",
     "print(\"Save Q2 ans took %.2f\" % (time.time()-sTime))\n",
     "\n",
@@ -127,10 +117,234 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 269,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start process Q3\n",
+      "1\n",
+      "30001\n",
+      "60001\n",
+      "90001\n",
+      "120001\n",
+      "150001\n",
+      "180001\n",
+      "210001\n",
+      "240001\n",
+      "270001\n",
+      "300001\n",
+      "330001\n",
+      "360001\n",
+      "390001\n",
+      "420001\n",
+      "450001\n",
+      "480001\n",
+      "510001\n",
+      "540001\n",
+      "570001\n",
+      "600001\n",
+      "630001\n",
+      "660001\n",
+      "690001\n",
+      "720001\n",
+      "750001\n",
+      "780001\n",
+      "810001\n",
+      "840001\n",
+      "870001\n",
+      "900001\n",
+      "930001\n",
+      "960001\n",
+      "990001\n",
+      "1020001\n",
+      "1050001\n",
+      "1080001\n",
+      "1110001\n",
+      "1140001\n",
+      "1170001\n",
+      "1200001\n",
+      "1230001\n",
+      "1260001\n",
+      "1290001\n",
+      "1320001\n",
+      "1350001\n",
+      "1380001\n",
+      "1410001\n",
+      "1440001\n",
+      "1470001\n",
+      "1500001\n",
+      "1530001\n",
+      "1560001\n",
+      "1590001\n",
+      "1620001\n",
+      "1650001\n",
+      "1680001\n",
+      "1710001\n",
+      "1740001\n",
+      "1770001\n",
+      "1800001\n",
+      "1830001\n",
+      "1860001\n",
+      "1890001\n",
+      "1920001\n",
+      "1950001\n",
+      "1980001\n",
+      "2010001\n",
+      "2040001\n",
+      "2070001\n",
+      "2100001\n",
+      "2130001\n",
+      "2160001\n",
+      "2190001\n",
+      "2220001\n",
+      "2250001\n",
+      "2280001\n",
+      "2310001\n",
+      "2340001\n",
+      "2370001\n",
+      "2400001\n",
+      "2430001\n",
+      "2460001\n",
+      "2490001\n",
+      "2520001\n",
+      "2550001\n",
+      "2580001\n",
+      "2610001\n",
+      "2640001\n",
+      "2670001\n",
+      "2700001\n",
+      "2730001\n",
+      "2760001\n",
+      "2790001\n",
+      "2820001\n",
+      "2850001\n",
+      "2880001\n",
+      "2910001\n",
+      "2940001\n",
+      "2970001\n",
+      "3000001\n",
+      "3030001\n",
+      "3060001\n",
+      "3090001\n",
+      "3120001\n",
+      "3150001\n",
+      "3180001\n",
+      "3210001\n",
+      "3240001\n",
+      "3270001\n",
+      "3300001\n",
+      "3330001\n",
+      "3360001\n",
+      "3390001\n",
+      "3420001\n",
+      "3450001\n",
+      "3480001\n",
+      "3510001\n",
+      "3540001\n",
+      "3570001\n",
+      "3600001\n",
+      "3630001\n",
+      "3660001\n",
+      "3690001\n",
+      "3720001\n",
+      "3750001\n",
+      "3780001\n",
+      "3810001\n",
+      "3840001\n",
+      "3870001\n",
+      "3900001\n",
+      "3930001\n",
+      "3960001\n",
+      "3990001\n",
+      "4020001\n",
+      "4050001\n",
+      "4080001\n",
+      "4110001\n",
+      "4140001\n",
+      "4170001\n",
+      "4200001\n",
+      "4230001\n",
+      "4260001\n",
+      "4290001\n",
+      "4320001\n",
+      "4350001\n",
+      "4380001\n",
+      "4410001\n",
+      "4440001\n",
+      "4470001\n",
+      "4500001\n",
+      "4530001\n",
+      "4560001\n",
+      "4590001\n",
+      "4620001\n",
+      "4650001\n",
+      "4680001\n",
+      "4710001\n",
+      "4740001\n",
+      "4770001\n",
+      "4800001\n",
+      "4830001\n",
+      "4860001\n",
+      "4890001\n",
+      "4920001\n",
+      "4950001\n",
+      "4980001\n",
+      "5010001\n",
+      "5040001\n",
+      "5070001\n",
+      "5100001\n",
+      "Q3 took: 369.20s\n",
+      "Save Q3 ans took 12.91\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Q3\n",
+    "\n",
+    "# Nodes 875713\n",
+    "# Edges 5105039\n",
+    "\n",
+    "\n",
+    "\n",
+    "# ==== initial setting ====\n",
+    "sTime = time.time()\n",
+    "toNode = {}\n",
+    "fromNode = {}\n",
+    "# ==== initial setting ====\n",
+    "\n",
+    "\n",
+    "print(\"Start process Q3\")\n",
+    "# map data to rdd by spark\n",
+    "m = pd.read_csv(dataPath, sep=\"\\t\", header=None)\n",
+    "length = len(d)\n",
+    "\n",
+    "for mm in range(length):\n",
+    "    fromNode[mm] = []\n",
+    "    toNode[mm] = []\n",
+    "\n",
+    "for i in range(length):\n",
+    "    fromNode[m[1][i]].append(m[0][i])\n",
+    "    toNode[m[0][i]].append(m[1][i])\n",
+    "    if i % 30000 == 0:\n",
+    "        print(i+1)\n",
+    "        \n",
+    "print(\"Q3 took: %.2fs\" % (time.time()-sTime))\n",
+    "\n",
+    "# save Q3 Result\n",
+    "sTime = time.time()\n",
+    "with open(\"Q3_Result.txt\", 'w') as out:\n",
+    "    for i in range(length):\n",
+    "        out.write(str(i) + \"\\n\")\n",
+    "        out.write(str(toNode[i]) + \"\\n\")\n",
+    "        out.write(str(fromNode[i]) + \"\\n\")\n",
+    "\n",
+    "print(\"Save Q3 ans took %.2f\" % (time.time()-sTime))\n",
+    "\n",
+    "# Q3"
+   ]
   }
  ],
  "metadata": {
